--- a/02_선택자/index.html
+++ b/02_선택자/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>02_CSS_선택자</title>
+    <title>02_CSS_선택자_수정</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
