메인 index.html 파일 데이터 입력
메인 index.html 파일 데이터 입력

--- a/index.html
+++ b/index.html
@@ -10,8 +10,40 @@
     <br />
 
     <h3>수업</h3>
+        <div>
+            <ul>
+                <li>
+                   <a href="/01/">1주차</a> 
+                </li>
+                <li>    
+                   <a href="">2주차</a> 
+                </li>
+                <li>
+                   <a href="">3주차</a> 
+                </li>
+                <li>
+                   <a href="/04_CSS 구성하기/">4주차</a> 
+                </li>
+            </ul>
+        </div>
 
-    <h3>숙제</h3>
+    <h3>과제</h3>
+        <div>
+            <ul>
+                <li>
+                    <a href="">1주차</a>
+                </li>
+                <li>
+                    <a href="">2주차</a>
+                </li>
+                <li>
+                    <a href="">3주차</a>
+                </li>
+                <li>
+                    <a href="/숙제/CSS_실습과제1/">4주차</a>
+                </li>
+            </ul>
+        </div>
     
 </body>
 </html>
