폴더 구조 개선
폴더 구조 개선

--- a/index.html
+++ b/index.html
@@ -13,16 +13,23 @@
         <div>
             <ul>
                 <li>
-                   <a href="/01/">1주차</a> 
+                   <a href="">1주차_토</a> 
                 </li>
                 <li>    
-                   <a href="">2주차</a> 
+                   <a href="">1주차_일</a> 
                 </li>
                 <li>
-                   <a href="">3주차</a> 
+                   <a href="">2주차_토</a> 
                 </li>
-                <li>
-                   <a href="/04_CSS 구성하기/">4주차</a> 
+                <li>2주차_일
+                    <ul>
+                        <li>
+                            <a href="/수업/04_CSS 구성하기/01_스타일시트/index.html">1번</a>
+                        </li>
+                        <li>
+                            <a href="/수업/04_CSS 구성하기/02_선택자/index.html">2번</a>
+                        </li>
+                    </ul>
                 </li>
             </ul>
         </div>
@@ -34,13 +41,7 @@
                     <a href="">1주차</a>
                 </li>
                 <li>
-                    <a href="">2주차</a>
-                </li>
-                <li>
-                    <a href="">3주차</a>
-                </li>
-                <li>
-                    <a href="/숙제/CSS_실습과제1/">4주차</a>
+                    <a href="/과제/02_CSS_실습과제1/index.html">2주차</a>
                 </li>
             </ul>
         </div>
