a 태그 경로 수정

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                 <li>2주차_일
                     <ul>
                         <li>
-                            <a href="/수업/04_CSS 구성하기/01_스타일시트/index.html">1번</a>
+                            <a href="/수업/04_CSS 구성하기/01_스타일시트/">1번</a>
                         </li>
                         <li>
-                            <a href="/수업/04_CSS 구성하기/02_선택자/index.html">2번</a>
+                            <a href="/수업/04_CSS 구성하기/02_선택자/">2번</a>
                         </li>
                     </ul>
                 </li>
@@ -41,7 +41,7 @@
                     <a href="">1주차</a>
                 </li>
                 <li>
-                    <a href="/과제/02_CSS_실습과제1/index.html">2주차</a>
+                    <a href="/과제/02_CSS_실습과제1/">2주차</a>
                 </li>
             </ul>
         </div>
