1주차 토요일 강의 추가_메인 index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div>
             <ul>
                 <li>
-                   <a href="">1주차_토</a> 
+                   <a href="./class/01_firstproject/index.html">1주차_토</a> 
                 </li>
                 <li>    
                    <a href="">1주차_일</a> 
