1주차 토요일 수정

--- a/class/01_firstproject/index.html
+++ b/class/01_firstproject/index.html
@@ -15,7 +15,7 @@
     <!-- ctrl + / : 주석 공간 만들기
     alt + shift + 아래화살표 : 줄 복제
     alt + 아래화살표(또는 위화살표) : 줄 이동  -->
-
+    Hello World !
 
 </body>
 </html>
