--- a/class/01_firstproject/index.html
+++ b/class/01_firstproject/index.html
@@ -15,7 +15,50 @@
     <!-- ctrl + / : 주석 공간 만들기
     alt + shift + 아래화살표 : 줄 복제
     alt + 아래화살표(또는 위화살표) : 줄 이동  -->
-    Hello World !
+    1
+    2
+    3
+    4
+    5
+    <!-- 블록(레고)과 인라인(인라인 스케이트 바퀴) -->
+    <div>1</div>
+    <div>2</div>
+    <div>3</div>
+    <div>4</div>
+    <div>5</div>
+    <span>6</span>
+    <span>7</span>
+    <span>8</span>
+    <span>9</span>
+    <span>10</span>
+
+    <div>타이틀 관련 태그</div>
+    <h1>타이틀1</h1>
+    <h2>타이틀2</h2>
+    <h3>타이틀3</h3>
+    <h4>타이틀4</h4>
+    <h5>타이틀5</h5>
+    <h6>타이틀6</h6>
+
+    <div>문단 태그(블록)</div>
+    <p style="color: red;">과학기술정보통신부는 26일 실시한 5G 주파수 28㎓ 대역 2일차 경매가 797억원에 종료됐다고 밝혔다.</p>
+    <p style="color: orange;">과학기술정보통신부는 26일 실시한 5G 주파수 28㎓ 대역 2일차 경매가 797억원에 종료됐다고 밝혔다.</p>
+
+    <div>링크 태그(인라인)</div>
+    <a href="https://www.naver.com/">네이버</a>
+    <a href="http://www.google.com/" target="_blank" rel="noopener noreferrer">구글로 이동하기</a>
+    <a href="mailto:jonghoko3@naver.com">메일 발송하기</a>
+    <a href="tel:01057621060">고객센터 전화걸기</a>
+    <a href="SMS:01057621060">고객센터 문자발송</a>
+
+    <div>이미지 태그(인라인)</div>
+    <img src="./img/favicon.png" alt="개구리 이미지" style="width: 120px;">
+    <img src="./img/favicon.png" alt="개구리 이미지" style="width: 120px;">
+    <img src="./img/favicon.png" alt="개구리 이미지" style="width: 120px;">
+    <img src="./img/favicon.png" alt="개구리 이미지" style="width: 120px;">
+    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.miricanvas.com%2Fko%2Ftemplates%2Fstamp_circle%2F11ixd&psig=AOvVaw2HjfrU0KugWuWwzEFufMua&ust=1706363579503000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCOCwtuqZ-4MDFQAAAAAdAAAAABAJ" alt="햄스터 이미지" style="width: 120px;">
+
+
 
 </body>
 </html>
