--- a/class/01_firstproject/index.html
+++ b/class/01_firstproject/index.html
@@ -56,8 +56,7 @@
     <img src="./img/favicon.png" alt="개구리 이미지" style="width: 120px;">
     <img src="./img/favicon.png" alt="개구리 이미지" style="width: 120px;">
     <img src="./img/favicon.png" alt="개구리 이미지" style="width: 120px;">
-    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.miricanvas.com%2Fko%2Ftemplates%2Fstamp_circle%2F11ixd&psig=AOvVaw2HjfrU0KugWuWwzEFufMua&ust=1706363579503000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCOCwtuqZ-4MDFQAAAAAdAAAAABAJ" alt="햄스터 이미지" style="width: 120px;">
-
+    <img src="https://stickershop.line-scdn.net/stickershop/v1/product/3299307/LINEStorePC/main.png?v=1" alt="햄스터 이미지" style="width: 120px;">
 
 
 </body>
