메인 index.html_3주차 강의

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                    <a href="./class/01_firstproject/index.html">1주차_토</a> 
                 </li>
                 <li>    
-                   <a href="">1주차_일</a> 
+                   <a href="./class/02/index.html">1주차_일</a>
                 </li>
                 <li>
-                   <a href="">2주차_토</a> 
+                   <a href="./class/03_HTML_구성하기/index.html">2주차_토</a> 
                 </li>
                 <li>2주차_일
                     <ul>
@@ -31,6 +31,27 @@
                         </li>
                     </ul>
                 </li>
+                <li>3주차_토
+                    <ul>
+                        <li>
+                            <a href="./class/04_CSS/03_font/index.html">1번</a>
+                        </li>
+                        <li>
+                            <a href="./class/04_CSS/04_background/index.html">2번</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>3주차_일
+                    <ul>
+                        <li>
+                            <a href="./class/04_CSS/05_box/index.html">1번</a>
+                        </li>
+                        <li>
+                            <a href="./class/04_CSS/06_layout/index.html">2번</a>
+                        </li>
+                    </ul>
+                </li>
+
             </ul>
         </div>
 
@@ -42,6 +63,16 @@
                 </li>
                 <li>
                     <a href="./assignment/02_CSS/index.html">2주차</a>
+                </li>
+                <li>3주차
+                    <ul>
+                        <li>
+                            <a href="">1번</a>
+                        </li>
+                        <li>
+                            <a href="">2번</a>
+                        </li>
+                    </ul>
                 </li>
             </ul>
         </div>
