1, 3주차 과제 + 메인 index.html 파일 재구성

--- a/index.html
+++ b/index.html
@@ -13,45 +13,43 @@
         <div>
             <ul>
                 <li>
-                   <a href="./class/01_firstproject/index.html">1주차_토</a> 
+                   <a href="./class/01_firstproject/index.html">01_firstproject</a>
                 </li>
-                <li>    
-                   <a href="./class/02/index.html">1주차_일</a>
+                <li>02_firstproject_review
+                    <ul>
+                        <li>
+                            <a href="./class/02_firstproject_review/index.html">Main</a>
+                        </li>
+                        <li>
+                            <a href="./class/02_firstproject_review/sub.html">Sub</a>
+                        </li>
+                    </ul>
                 </li>
                 <li>
-                   <a href="./class/03_HTML_구성하기/index.html">2주차_토</a> 
+                   <a href="./class/03_HTML/index.html">03_HTML</a> 
                 </li>
-                <li>2주차_일
+                <li>04_CSS
                     <ul>
                         <li>
-                            <a href="./class/04_CSS/01_stylesheet/index.html">1번</a>
+                            <a href="./class/04_CSS/01_stylesheet/index.html">01_stylesheet</a>
                         </li>
                         <li>
-                            <a href="./class/04_CSS/02_selector/index.html">2번</a>
+                            <a href="./class/04_CSS/02_selector/index.html">02_selector</a>
+                        </li>
+                        <li>
+                            <a href="./class/04_CSS/03_font/index.html">03_font</a>
+                        </li>
+                        <li>
+                            <a href="./class/04_CSS/04_background/index.html">04_background</a>
+                        </li>
+                        <li>
+                            <a href="./class/04_CSS/05_box/index.html">05_box</a>
+                        </li>
+                        <li>
+                            <a href="./class/04_CSS/06_layout/index.html">06_layout</a>
                         </li>
                     </ul>
                 </li>
-                <li>3주차_토
-                    <ul>
-                        <li>
-                            <a href="./class/04_CSS/03_font/index.html">1번</a>
-                        </li>
-                        <li>
-                            <a href="./class/04_CSS/04_background/index.html">2번</a>
-                        </li>
-                    </ul>
-                </li>
-                <li>3주차_일
-                    <ul>
-                        <li>
-                            <a href="./class/04_CSS/05_box/index.html">1번</a>
-                        </li>
-                        <li>
-                            <a href="./class/04_CSS/06_layout/index.html">2번</a>
-                        </li>
-                    </ul>
-                </li>
-
             </ul>
         </div>
 
@@ -59,18 +57,18 @@
         <div>
             <ul>
                 <li>
-                    <a href="">1주차</a>
+                    <a href="./assignment/01_WEEK/index.html">1주차</a>
                 </li>
                 <li>
-                    <a href="./assignment/02_CSS/index.html">2주차</a>
+                    <a href="./assignment/02_WEEK/index.html">2주차</a>
                 </li>
                 <li>3주차
                     <ul>
                         <li>
-                            <a href="">1번</a>
+                            <a href="./assignment/03_WEEK/CSS_실습과제2_폰트&배경/index.html">1번</a>
                         </li>
                         <li>
-                            <a href="">2번</a>
+                            <a href="./assignment/03_WEEK/CSS_실습과제3_박스공간/index.html">2번</a>
                         </li>
                     </ul>
                 </li>
