--- a/class/04_CSS/06_layout/index.html
+++ b/class/04_CSS/06_layout/index.html
@@ -55,6 +55,48 @@
     <p>a</p>
     <p>b</p>
     <p>c</p>
+                
+
+    <hr />
+    <h3>display: block | inline | inline-block</h3>
+    <section id="display">
+        <div class="img-box bg1"></div>
+        <div class="img-box bg2"></div>
+        <div class="img-box bg3"></div>
+        <div class="img-box bg4"></div>
+    </section>
+
+    <hr />
+
+    <section id="display-center">
+        <div class="wrap">
+            <div class="img-box bg1"></div>
+            <div class="img-box bg2"></div>
+            <div class="img-box bg3"></div>
+            <div class="img-box bg4"></div>
+        </div>
+    </section>
+
+    <h3>display: table -> table-cell</h3>
+    <div id="table-space">
+        <h4>반려견 동행하기</h4>
+    </div>
+
+
+    <h3>display: flex => 부모가 자식의 배치를 지정(가로배치, 세로배치)</h3>
+    
+    <h4>부모에 의한 통제</h4>
+    <div id="flex1">
+        <div class="item">item1</div>
+        <div class="item">item2</div>
+        <div class="item">item3</div>
+        <div class="item">item4</div>
+    </div>
+
+
+
+
+
 
 
 
