--- a/class/04_CSS/06_layout/index.html
+++ b/class/04_CSS/06_layout/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>06_CSS_레이아웃</title>
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/09743b710b.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body id="top">
     
     <h2>레이아웃</h2>
     <p>float(띄우다) : 부모 공간에서 좌측으로 가로정렬 시킬 것이다.</p>
@@ -93,11 +94,110 @@
         <div class="item">item4</div>
     </div>
 
+    <div class="flex-header1">
+        <div class="wrap">
+            <div class="logo">
+                <a href="">
+                    <img src="./img/logo.png" alt="아디다스 로고">
+                </a>
+            </div>
+            <div class="menu">
+                <ul>
+                    <li><a href="">MEN</a></li>
+                    <li><a href="">WOMEN</a></li>
+                    <li><a href="">KID</a></li>
+                    <li><a href="">EVENT</a></li>
+                </ul>
+            </div>
+            <div class="sign">
+                <ul>
+                    <li><a href="">로그인</a></li>
+                    <li><a href="">회원가입</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <h4>2행 이상의 콘텐츠 공간 구성시(마진 사용)</h4>
+    <div class="flex-content1">
+        <div class="wrap">
+            <div class="item">item1</div>
+            <div class="item">item2</div>
+            <div class="item">item3</div>
+            <div class="item">item4</div>
+            <div class="item">item5</div>
+            <div class="item">item6</div>
+            <div class="item">item7</div>
+            <div class="item">item8</div>
+        </div>
+    </div>
+
+    <hr />
+
+    <h4>2행 이상의 콘텐츠 공간 구성시(마진 미사용)</h4>
+    <div class="flex-content2">
+        <div class="wrap">
+            <div class="item">item1</div>
+            <div class="item">item2</div>
+            <div class="item">item3</div>
+            <div class="item">item4</div>
+            <div class="item">item5</div>
+            <div class="item">item6</div>
+            <div class="item">item7</div>
+            <div class="item">item8</div>
+        </div>
+    </div>
+
+    <h4>자식에 대한 부분으로 flex를 통제시</h4>
+    <div class="flex-child1">
+        <div class="item item1">item1</div>
+        <div class="item item2">item2</div>
+        <div class="item item3">item3</div>
+        <div class="item item4">item4</div>
+    </div>
+
+    <hr />
+
+    <div class="flex-child2">
+        <div class="item item1">item1</div>
+        <div class="item item2">item2</div>
+        <div class="item item3">item3</div>
+        <div class="item item4">item4</div>
+    </div>
 
 
+    <h2>position</h2>
+    <h3>
+        static : 일반적인 적층 개념 - 작성하지 않아도 기본값
+        <br />
+        relative : 상대적인 좌표값을 설정
+        absloute : 선언된 영역을 절대 좌표의 위치에 배치 가능
+        fixed : 현재 보여지는 브라우저의 공간을 기준으로 고정시킴
+    </h3>
+    <h3>
+        css에 z-index 값(정수)을 통해 전면부나 후면부로 배치 가능
+    </h3>
 
+    <h4>position : relative;</h4>
+    <div class="po_static">static - space</div>
+    <div class="po_relative">relative - space</div>
+    
+    <h4>position : absolute;</h4>
+    <div class="po_absolute_space">
+        <div class="absolute1">absolute1</div>
+        <div class="absolute2">absolute2</div>
+    </div>
 
+    <div class="ad_photo">
+        <img src="./img/awards.png" alt="">
+    </div>
 
+    <h4>potition : fixed;</h4>
+    <a href="#top">
+        <div class="po_fixed">
+            <i class="fas fa-arrow-up"></i>
+        </div>
+    </a>
 
 
 
