4주차 숙제 및 메인 index 파일 최신화

--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
                         <li>
                             <a href="./class/04_CSS/06_layout/index.html">06_layout</a>
                         </li>
+                        <li>
+                            <a href="./class/04_CSS/07_CSS3_01/index.html">07_CSS3_01</a>
+                        </li>
+                        <li>
+                            <a href="./class/04_CSS/08_CSS3_02_animation/index.html">08_CSS3_02_animation</a>
+                        </li>
                     </ul>
                 </li>
             </ul>
@@ -71,6 +77,9 @@
                             <a href="./assignment/03_WEEK/CSS_실습과제3_박스공간/index.html">2번</a>
                         </li>
                     </ul>
+                </li>
+                <li>
+                    <a href="./assignment/04_WEEK/index.html">4주차</a>
                 </li>
             </ul>
         </div>
