폴더명 및 메인 index.html 탭 명 변경

--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
         <div>
             <ul>
                 <li>
-                   <a href="./class/01_firstproject/index.html">01_firstproject</a>
+                   <a href="./class/01_HTML/index.html">01_HTML</a>
                 </li>
-                <li>02_firstproject_review
+                <li>02_HTML_작성하기
                     <ul>
                         <li>
-                            <a href="./class/02_firstproject_review/index.html">Main</a>
+                            <a href="./class/02_HTML/index.html">Main</a>
                         </li>
                         <li>
-                            <a href="./class/02_firstproject_review/sub.html">Sub</a>
+                            <a href="./class/02_HTML/sub.html">Sub</a>
                         </li>
                     </ul>
                 </li>
                 <li>
-                   <a href="./class/03_HTML/index.html">03_HTML</a> 
+                   <a href="./class/03_HTML/index.html">03_HTML_구성하기</a>
                 </li>
-                <li>04_CSS
+                <li>04_CSS_구성하기
                     <ul>
                         <li>
                             <a href="./class/04_CSS/01_stylesheet/index.html">01_stylesheet</a>
