과제 피드백 수정 및 폴더 구조 변경

--- a/index.html
+++ b/index.html
@@ -78,8 +78,15 @@
                         </li>
                     </ul>
                 </li>
-                <li>
-                    <a href="./assignment/04_WEEK/index.html">4주차</a>
+                <li>4주차
+                    <ul>
+                        <li>
+                            <a href="./assignment/04_WEEK/CSS_실습과제4_레이아웃1/index.html">1번</a>
+                        </li>
+                        <li>
+                            <a href="">2번</a>
+                        </li>
+                    </ul>
                 </li>
             </ul>
         </div>
