4주차 2번 과제 75% 완료

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             <a href="./assignment/04_WEEK/CSS_실습과제4_레이아웃1/index.html">1번</a>
                         </li>
                         <li>
-                            <a href="">2번</a>
+                            <a href="./assignment/04_WEEK/CSS_실습과제5_레이아웃2/index.html">2번</a>
                         </li>
                     </ul>
                 </li>
