--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <h2>수업</h2>
             <div>
                 <ul>
-                    <li class="divide">01_HTML
+                    <li class="divide">01_firstProject
                         <p>
-                            <a href="./class/01_HTML/index.html">FirstProject</a>
+                            <a href="./class/01_firstProject/index.html">고종호 - FirstPr.</a>
                         </p>
                     </li>
                     <li class="divide">02_HTML_작성하기
@@ -62,6 +62,11 @@
                             <a href="./class/04_CSS/08_CSS3_02_animation/index.html">08_CSS3_02_animation</a>
                         </p>
                     </li>
+                    <li class="divide">05_Javascript_구성하기
+                        <p>
+                            <a href="./class/05_Javascript/01_Javascript_varialble_declaration/index.html">01_Javascript_varialble_declaration</a>
+                        </p>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -94,6 +99,11 @@
                         </p>
                         <p>
                             <a href="./assignment/04_WEEK/CSS_실습과제5_레이아웃2/index.html">2번</a>
+                        </p>
+                    </li>
+                    <li class="divide">5주차
+                        <p>
+                            <a href="./assignment/05_WEEK/01_변수선언 실습문제/index.html">1번</a>
                         </p>
                     </li>
                 </ul>
