5주차 토요일 숙제

--- a/class/05_Javascript/01_Javascript_varialble_declaration/index.html
+++ b/class/05_Javascript/01_Javascript_varialble_declaration/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>01_Javascript_선언 및 변수</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="#">
 </head>
 <body>
     <h3>자바스크립트의 종류</h3>
