--- a/assignment/05_WEEK/01_변수선언 실습문제/index.html
+++ b/assignment/05_WEEK/01_변수선언 실습문제/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>01_변수선언 실습문제</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="#">
 </head>
 <body>
-    
+    <script src="./js/script.js"></script>
 </body>
 </html>
