5주차 일요일 과제 완료

--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
                         <p>
                             <a href="./assignment/05_WEEK/01_변수선언 실습문제/index.html">1번</a>
                         </p>
+                        <p>
+                            <a href="./assignment/05_WEEK/02_연산자 실습문제/index.html">2번</a>
+                        </p>
                     </li>
                 </ul>
             </div>
