5주차 토요일 강의

--- a/class/05_Javascript/03_Javascript_control_statement/index.html
+++ b/class/05_Javascript/03_Javascript_control_statement/index.html
@@ -5,14 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>03_Javascript_제어문</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="#" type="image/x-icon">
 </head>
 <body>
-    
-
-
-
-
-
     <script type="text/javascript" src="./js/script.js"></script>
 </body>
 </html>
