6주차 메인 index.html 파일 추가

--- a/index.html
+++ b/index.html
@@ -66,6 +66,20 @@
                         <p>
                             <a href="./class/05_Javascript/01_Javascript_varialble_declaration/index.html">01_Javascript_varialble_declaration</a>
                         </p>
+                        <p>
+                            <a href="./class/05_Javascript/02_JavaScript_operator/index.html">02_JavaScript_operator</a>
+                        </p>
+                        <p>
+                            <a href="./class/05_Javascript/03_Javascript_control_statement/index.html">03_Javascript_control_statement</a>
+                        </p>
+                    </li>
+                    <li class="divide">06_Javascript_기본_구성하기
+                        <p>
+                            <a href="./class/06_Javascript/01_javascript_object/index.html">01_javascript_object</a>
+                        </p>
+                        <p>
+                            <a href="./class/06_Javascript/01_javascript_object_2/index.html">01_javascript_object_2</a>
+                        </p>
                     </li>
                 </ul>
             </div>
@@ -107,6 +121,14 @@
                         </p>
                         <p>
                             <a href="./assignment/05_WEEK/02_연산자 실습문제/index.html">2번</a>
+                        </p>
+                    </li>
+                    <li class="divide">6주차
+                        <p>
+                            <a href="./assignment/06_WEEK/03_제어문 실습문제/index.html">1번</a>
+                        </p>
+                        <p>
+                            <a href="./assignment/06_WEEK/자바스크립트(기초-복습)-실습문제/index.html">2번</a>
                         </p>
                     </li>
                 </ul>
