7주차 일요일 강의

--- a/class/06_Javascript/03_javascript_object_3/index.html
+++ b/class/06_Javascript/03_javascript_object_3/index.html
@@ -8,6 +8,16 @@
     <link rel="shortcut icon" href="./img/js_icon.ico" type="image/x-icon">
 </head>
 <body>
+
+    <!-- <div class="box">
+        <img src="./img/shop_01.jpg" alt="">
+        <h3>아동 타이틀</h3>
+        <p>내용</p>
+        <span>가격정보</span>        
+    </div> -->
+
+
+
     <script src="./js/script.js"></script>
 </body>
 </html>
