7주차 과제 기본 파일 구성

--- a/index.html
+++ b/index.html
@@ -75,10 +75,16 @@
                     </li>
                     <li class="divide">06_Javascript_기본_구성하기
                         <p>
-                            <a href="./class/06_Javascript/01_javascript_object/index.html">01_javascript_object</a>
+                            <a href="./class/06_Javascript/01_javascript_object_1/index.html">01_javascript_object_1</a>
                         </p>
                         <p>
-                            <a href="./class/06_Javascript/01_javascript_object_2/index.html">01_javascript_object_2</a>
+                            <a href="./class/06_Javascript/02_javascript_object_2/index.html">02_javascript_object_2</a>
+                        </p>
+                        <p>
+                            <a href="./class/06_Javascript/03_javascript_object_3/index.html">03_javascript_object_3</a>
+                        </p>
+                        <p>
+                            <a href="./class/06_Javascript/04_javascriot_DOM_1/index.html">04_javascript_DOM_1</a>
                         </p>
                     </li>
                 </ul>
@@ -131,9 +137,17 @@
                             <a href="./assignment/06_WEEK/자바스크립트(기초-복습)-실습문제/index.html">2번</a>
                         </p>
                     </li>
+                    <li class="divide">7주차
+                        <p>
+                            <a href="./assignment/07_WEEK/간단_실습_문제/index.html">1번</a>
+                        </p>
+                        <p>
+                            <a href="./assignment/07_WEEK/04_객체_실습문제/index.html">2번</a>
+                        </p>
+                    </li>
                 </ul>
             </div>
-        </div>
+        </div>x
     </main>
     
 </body>
