--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     </li>
                 </ul>
             </div>
-        </div>x
+        </div>
     </main>
     
 </body>
