8주차 일요일 강의 중간 업데이트

--- a/class/06_Javascript/04_javascriot_DOM_1/index.html
+++ b/class/06_Javascript/04_javascriot_DOM_1/index.html
@@ -121,13 +121,49 @@
     </div>
     <!-- var -->
 
+    <h2>문서 내의 하위요소 가져오기(get) / 조작하기(set)</h2>
+    <h3>inenerHTML / innerText 속성 : getType과 setType</h3>
+    <h4>선택자.innerHTML : 선택자의 하위 요소를 가져온다.</h4>
+    <h4>선택자.innerHTML = "새로운 값(태그 인정)" : 선택자의 하위요소에 새로운 값으로 변경해라.</h4>
 
+    <div class="in_html">
+        <img src="./img/coffee-blue.jpg" alt="커피 스토리">
+        <p>커피 사진-1</p>
+    </div>
 
+    <h4>선택자.innerText : 선택자의 하위요소 중에서 텍스트 영역만 가져온다.</h4>
+    <h4>선택자.innerText = "새로운 값(태그 인정 없음)" : 선택자의 하위요소에 새로운 값을 변경해라</h4>
 
+    <div class="in_text">
+        <img src="./img/pic-1.jpg" alt="" />
+        <p>배경1</p>
+    </div>
 
+    <h4>장문의 문장을 일부 숨겼다가 "+더보기"를 클릭하는 순간, 미리 숨겨진 문장을 보여준다면</h4>
 
+    <div class="review1">
+        <p>
+            G마켓의 결제시스템을 이용하지 않고 판매자와 직접 거래하실 경우 상품을 받지 못하거나 구매한 상품과 상이한 상품을 받는 등
+            <span class="add_review">
+                피해가 발생할 수 있으니 유의 바랍니다. 직거래로 인해 발생한 피해에 대해 G마켓은 책임을 지지 않습니다.
+            </span>
+            <div class="detail">
+                <span class="more" onclick="reviewMore();">+더보기</span>
+            </div>
+        </p>
+    </div>
 
-
+    <p>탭박스 영역</p>
+    <div class="tabSpace">
+        <div class="top"></div>
+        <div class="thumb">
+            <ul>
+                <li class="active" rel="0" onclick="firstTab();"></li>
+                <li rel="1" onclick="secondTab();"></li>
+                <li rel="2" onclick="thirdTab();"></li>
+            </ul>
+        </div>
+    </div>
 
 
 
