--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
                         <p>
                             <a href="./class/06_Javascript/04_javascriot_DOM_1/index.html">04_javascript_DOM_1</a>
                         </p>
+                        <p>
+                            <a href="./class/06_Javascript/05_javascript_function/index.html">05_javascript_function</a>
+                        </p>
                     </li>
                 </ul>
             </div>
@@ -143,6 +146,11 @@
                         </p>
                         <p>
                             <a href="./assignment/07_WEEK/04_객체_실습문제/index.html">2번</a>
+                        </p>
+                    </li>
+                    <li class="divide">8주차
+                        <p>
+                            <a href="./assignment/08_WEEK/index.html">1번</a>
                         </p>
                     </li>
                 </ul>
