9주차 토요일 강의

--- a/class/06_Javascript/05_javascript_function/index.html
+++ b/class/06_Javascript/05_javascript_function/index.html
@@ -39,9 +39,40 @@
     <img id="ch_img" src="./img/pic-1.jpg" alt="" style="width: 120px;">
 
     <!-- 매개변수 -->
+    <h3>매개변수를 활용한 회원명단 출력</h3>
+    <table border="1">
+        <thead>
+            <tr>
+                <th>이름</th>
+                <th>아이디</th>
+                <th>이메일</th>
+            </tr>
+        </thead>
+        <tbody id="mem_result">
+            <tr>
+                <td>가나다</td>
+                <td>gnd111</td>
+                <td>gnd111@gmail.com</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <h3>매개변수를 활용한 환경사진 화면에 뿌려주기</h3>
+    <div class="photoCover">
+        <div class="photo">
+            <div class="photoImg"></div>
+            <h4>환경 사진0</h4>
+        </div>
+        <div class="photo">
+            <div class="photoImg"></div>
+            <h4>환경 사진0</h4>
+        </div>
+    </div>
+
+
     <!-- 전역변수, 지역변수 -->
-    <!-- 재귀함수, 즉시실행함수 -->
     <!-- return문 -->
+    <!-- 재귀함수, 즉시실행함수 -->
 
 
 
