9주차 과제 + 메인페이지 갱신

--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
                         <p>
                             <a href="./class/06_Javascript/05_javascript_function/index.html">05_javascript_function</a>
                         </p>
+                        <p>
+                            <a href="./class/06_Javascript/06_javascript_event/index.html">06_javascript_event</a>
+                        </p>
                     </li>
                 </ul>
             </div>
@@ -153,10 +156,14 @@
                             <a href="./assignment/08_WEEK/index.html">1번</a>
                         </p>
                     </li>
+                    <li class="divide">9주차
+                        <p>
+                            <a href="./assignment/09_WEEK/index.html">1번</a>
+                        </p>
+                    </li>
                 </ul>
             </div>
         </div>
     </main>
-    
 </body>
 </html>
