10주차 토요일 강의 추가

--- a/class/06_Javascript/07_javascript_BOM/index.html
+++ b/class/06_Javascript/07_javascript_BOM/index.html
@@ -48,7 +48,7 @@
     <h3>location 객체 : URL 주소창의 내용을 변경 / 정보획듣도 가능(http 통신을 기반으로 접근)</h3>
     <h4>location.href : URL 주소창의 내용을 가져올 수도 있고, 변경도 가능</h4>
 
-
+    <a href="./index.html#box">클릭</a>
 
 
 
