--- a/class/06_Javascript/08_javascript_BOM_hash/sub.html
+++ b/class/06_Javascript/08_javascript_BOM_hash/sub.html
@@ -6,6 +6,7 @@
     <title>Hash_SubPage(sub.html)</title>
     <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/common_res.css">
     <link rel="stylesheet" href="./css/sub.css">
 </head>
 <body>
@@ -13,6 +14,13 @@
         <div class="wrap">
             <div class="logo">
                 <a href="./"><img src="./img/logo.png" alt="AdAge logo"></a>
+            </div>
+
+            <div class="resBtn">
+                <ul>
+                    <li class="menuBtn"><img src="./img/menu.svg" alt=""></li>
+                    <li class="closeBtn"><img src="./img/close.svg" alt=""></li>
+                </ul>
             </div>
             
             <nav>
@@ -41,7 +49,6 @@
             </div>
         </div>
     </section>
-
 
 
 
