10주차 과제 중간 푸시 & 메인페이지 갱신

--- a/assignment/09_WEEK/06_자바스크립트_함수 실습문제/index.html
+++ b/assignment/09_WEEK/06_자바스크립트_함수 실습문제/index.html
@@ -9,6 +9,26 @@
 </head>
 <body>
 
+    <h2>실습1</h2>
+    <div id="test_01" class="func_01"></div>
+
+
+    <h2>실습2</h2>
+    <div id="test_02" class="func_02"></div>
+
+
+    <h2>실습3</h2>
+    <div id="test_03" class="func_03"></div>
+
+
+    <h2>실습4</h2>
+    <div id="test_04" class="func_04"></div>
+
+
+    <h2>실습5</h2>
+    <div id="test_05" class="func_05"></div>
+
+
     <script src="./js/script.js"></script>
 </body>
 </html>
