--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
             <h2>수업</h2>
             <div>
                 <ul>
+                    <li class="divide">00_responsiveWeb
+                        <p>
+                            <a href="./class/00_responsiveWeb/index.html">반응형 웹</a>
+                        </p>
+                    </li>
                     <li class="divide">01_firstProject
                         <p>
                             <a href="./class/01_firstProject/index.html">고종호 - FirstPr.</a>
