11주차 토요일 강의

--- a/class/06_Javascript/08_javascript_BOM_hash/detail.html
+++ b/class/06_Javascript/08_javascript_BOM_hash/detail.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/common_res.css">
     <link rel="stylesheet" href="./css/detail.css">
+    <link rel="stylesheet" href="./css/detail_res.css">
 </head>
 <body>
     <header>
@@ -41,6 +42,10 @@
             <p>문단 내용</p>
         </div>
     </section>
+
+    <div class="history">
+        <button>목록보기</button>
+    </div>
 
     <footer>
         <p>&copy; adage.ltd</p>
