--- a/class/06_Javascript/08_javascript_BOM_hash/sub.html
+++ b/class/06_Javascript/08_javascript_BOM_hash/sub.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/common_res.css">
     <link rel="stylesheet" href="./css/sub.css">
+    <link rel="stylesheet" href="./css/sub.css">
 </head>
 <body>
     <header>
@@ -25,9 +26,9 @@
             
             <nav>
                 <ul>
-                    <li><a href="#nike">nike</a></li>
-                    <li><a href="#adidas">adidas</a></li>
-                    <li><a href="#puma">puma</a></li>
+                    <li rel="nike"><a href="#nike">nike</a></li>
+                    <li rel="adidas"><a href="#adidas">adidas</a></li>
+                    <li rel="puma"><a href="#puma">puma</a></li>
                 </ul>
             </nav>
         </div>
