--- a/class/06_Javascript/08_javascript_BOM_hash/index.html
+++ b/class/06_Javascript/08_javascript_BOM_hash/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/common_res.css">
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/index_res.css">
 </head>
 <body>
     <header>
